--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Hello Mind</string>
+    <string name="app_name">Pronchanok</string>
+    <string name="name">พรชนก</string>
 </resources>
